end of constantService

--- a/client/src/app/modules/administration/components/referentials/referential-affaire/add-affaire/add-affaire.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-affaire/add-affaire/add-affaire.component.html
@@ -27,24 +27,24 @@
           [conditionnalRequired]="!affaire.isIndividual">
         </autocomplete-legal-form>
       </td>
-      <td *ngIf="affaire.legalForm != null && affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE">
-        <autocomplete-siren [(model)]="affaire.siren" [form]="affaireForm" propertyName="siren" [isMandatory]="false"
+      <td *ngIf="affaire.legalForm != null && affaire.legalForm.id != legalFormUnregistered.id">
+        <autocomplete-siren [(model)]="affaire.siren" [form]="affaireForm" propertyName="siren" [isMandatory]="true"
           label="SIREN" [isDisabled]="!editMode" [byPassAutocompletValidator]="true"
-          [conditionnalRequired]="!this.affaire.isIndividual && this.affaire.legalForm != null && this.affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE"
+          [conditionnalRequired]="!this.affaire.isIndividual && this.affaire.legalForm != null"
           [customValidators]="[checkSiren('siren')]" (onOptionSelected)="fillSiren($event)">
         </autocomplete-siren>
       </td>
-      <td *ngIf="affaire.legalForm != null && affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE">
-        <autocomplete-siret [(model)]="affaire.siret" [form]="affaireForm" propertyName="siret" [isMandatory]="false"
+      <td *ngIf="affaire.legalForm != null && affaire.legalForm.id != legalFormUnregistered.id">
+        <autocomplete-siret [(model)]="affaire.siret" [form]="affaireForm" propertyName="siret" [isMandatory]="true"
           label="SIRET" [isDisabled]="!editMode" [byPassAutocompletValidator]="true"
-          [conditionnalRequired]="!this.affaire.isIndividual && this.affaire.legalForm != null && this.affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE"
+          [conditionnalRequired]="!this.affaire.isIndividual && this.affaire.legalForm != null "
           [customValidators]="[checkSiret('siret')]" (onOptionSelected)="fillSiret($event)">
         </autocomplete-siret>
       </td>
-      <td *ngIf="affaire.legalForm != null && affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE">
-        <autocomplete-rna [(model)]="affaire.rna" [form]="affaireForm" propertyName="rna" [isMandatory]="false"
+      <td *ngIf="affaire.legalForm != null && affaire.legalForm.id != legalFormUnregistered.id">
+        <autocomplete-rna [(model)]="affaire.rna" [form]="affaireForm" propertyName="rna" [isMandatory]="true"
           label="RNA" [isDisabled]="!editMode" [byPassAutocompletValidator]="true"
-          [conditionnalRequired]="!this.affaire.isIndividual && this.affaire.legalForm != null && this.affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE"
+          [conditionnalRequired]="!this.affaire.isIndividual && this.affaire.legalForm != null "
           [customValidators]="[checkRna('rna')]" (onOptionSelected)="fillRna($event)"></autocomplete-rna>
       </td>
     </tr>
