--- a/client/src/app/modules/invoicing/components/payment-list/payment-list.component.html
+++ b/client/src/app/modules/invoicing/components/payment-list/payment-list.component.html
@@ -4,7 +4,7 @@
       <tr>
         <td>
           <select-payment-way [(model)]="paymentSearch.paymentWays" label="Sens du paiement" [form]="paymentForm"
-            propertyName="paymentWay" [isMandatory]="true" [defaultCodesSelected]="[PAYEMENT_WAY_INBOUND_CODE]">
+            propertyName="paymentWay" [isMandatory]="true" [defaulTypeSelected]="[paymentWayInbound]">
           </select-payment-way>
         </td>
         <td>
